Fixed hidden-accessible elements occasionally causing scrollbars to appear in the Metalsmith boilerplate

--- a/boilerplates/metalsmith/src/assets/scss/partials/globals/_mixins.scss
+++ b/boilerplates/metalsmith/src/assets/scss/partials/globals/_mixins.scss
@@ -84,6 +84,7 @@
     position: absolute;
     clip: rect(0, 0, 0, 0);
     opacity: 0;
+    overflow: hidden;
 }
 
 //@mixin clearfix() {
